# GhostInjector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  toolchain-mingw.cmake
.github/workflows/: build.yml
src/: main.c  main.cpp
tests/: CMakeLists.txt
tests/TestDLL/: CMakeLists.txt
tests/TestDLL/src/: dllmain.c
