cmake_minimum_required(VERSION 3.10)
project(GhostInjector VERSION 1.0.2 LANGUAGES C CXX)

if(MSVC)
    string(REPLACE "/MT" "/MD" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
    string(REPLACE "/MT" "/MD" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
endif()

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(Neptune)
add_subdirectory(NThread)
add_subdirectory(NThreadOSUtils)

set(GHOSTINJECTOR_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(GHOSTINJECTOR_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB_RECURSE GHOSTINJECTOR_HEADERS CONFIGURE_DEPENDS ${GHOSTINJECTOR_INCLUDE_DIR}/*.h ${GHOSTINJECTOR_INCLUDE_DIR}/*.hpp)
file(GLOB_RECURSE GHOSTINJECTOR_SOURCES CONFIGURE_DEPENDS ${GHOSTINJECTOR_SOURCE_DIR}/*.c ${GHOSTINJECTOR_SOURCE_DIR}/*.cpp)

string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
set(EXECUTABLE_NAME "${PROJECT_NAME_LOWER}-${PROJECT_VERSION}")

add_executable(${EXECUTABLE_NAME} ${GHOSTINJECTOR_SOURCES})
target_include_directories(${EXECUTABLE_NAME} PRIVATE ${GHOSTINJECTOR_INCLUDE_DIR})
target_link_libraries(${EXECUTABLE_NAME} PRIVATE NThreadOSUtils)

target_compile_definitions(${EXECUTABLE_NAME} PRIVATE
  LOG_LEVEL_2
  NEPTUNE_MODULERULES_HEADER="ntosutils_rules.h"
  NEPTUNE_ENABLE_MEMMEM
  VERSION=${PROJECT_VERSION}
  LOG_FILE_PATH=L"ghostinjector.log"
  LOG_ON_STDOUT=1
)

